error pages and page titles

--- a/tugas1v2/src/main/resources/templates/viewall.html
+++ b/tugas1v2/src/main/resources/templates/viewall.html
@@ -8,7 +8,7 @@
 			margin-top:10px;
 		}	
 	</style>
-	<title>Home</title>
+	<title>View Jabatan</title>
 	
 	<link href = "https://cdn.datatables.net/1.10.18/css/dataTables.bootstrap4.min.css">
 	<link href = "https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
