--- a/tugas1v2/src/main/resources/templates/addPegawai.html
+++ b/tugas1v2/src/main/resources/templates/addPegawai.html
@@ -26,22 +26,22 @@
 			<input hidden="true" text="placeholder" type="text"  name="nip"/>
 			<tr>
 				<td>Nama</td>
-				<td><input class="form-control" type="text" name="nama" /></td>
+				<td><input class="form-control" type="text" name="nama" required="required" /></td>
 			</tr>
 			
 			<tr>
 				<td>Tempat Lahir</td>
-				<td><input class="form-control" type="text" name="tempat_lahir" /></td>
+				<td><input class="form-control" type="text" name="tempat_lahir" required="required" /></td>
 			</tr>
 			
 			<tr>
 				<td>Tanggal Lahir</td>
-				<td><input type="date" name="tanggalLahir" class="form-control" /></td>
+				<td><input type="date" name="tanggalLahir" class="form-control"  required="required"/></td>
 			</tr>
 			
 			<tr>
 				<td>Tahun Masuk</td>
-				<td><input class="form-control" type="text" name="tahunMasuk" /></td>
+				<td><input class="form-control" type="text" name="tahunMasuk" required="required" /></td>
 			</tr>
 			
 			<tr>
