--- a/tugas1v2/src/main/resources/templates/cariPegawai.html
+++ b/tugas1v2/src/main/resources/templates/cariPegawai.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script>
 	
-	<title>Detail Pegawai</title>	
+	<title>Cari Pegawai</title>	
 	<object th:include="fragments/fragment :: css" th:remove="tag"></object>
 	<object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
