--- a/tugas1v2/src/main/resources/templates/tertua-termuda.html
+++ b/tugas1v2/src/main/resources/templates/tertua-termuda.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://thymeleaf.org">
 
 <head>
-	<title>Home</title>	
+	<title>Tertua dan Termuda</title>	
 	<object th:include="fragments/fragment :: css" th:remove="tag"></object>
 	<object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
