--- a/tugas1v2/src/main/resources/templates/updatePegawai.html
+++ b/tugas1v2/src/main/resources/templates/updatePegawai.html
@@ -12,7 +12,7 @@
 	  src="https://code.jquery.com/jquery-3.3.1.slim.js"
 	  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
 	  crossorigin="anonymous"></script>
-	<title>Detail Pegawai</title>	
+	<title>Update Pegawai</title>	
 	<object th:include="fragments/fragment :: css" th:remove="tag"></object>
 	<object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
